product_uload view 90%
 - tags part done

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -293,7 +293,7 @@
 
 .list-card .card-main-info .socialup-gauge {
     position: absolute;
-    top: 85;
+    top: 85px;
     left: 30px;
     z-index: 9;
 }
