--- a/templates/home.html
+++ b/templates/home.html
@@ -224,7 +224,12 @@
                                             </div>
                                         </ul>
                                         <div class="cash">
-                                            <span style="font-size:1.2em; color:grey;" data-price="{{ product.price }}">{{ product.price }}원~</span>
+                                            <span style="font-size:1.2em; color:grey;" data-price="{{ product.price }}">
+                                                {{ product.price }}원
+                                                {% if product.manuscript_price > 0 or product.highrank_price > 0 %}
+                                                    ~
+                                                {% endif %}
+                                            </span>
                                         </div>
                                     </div>
                                 </div>
