--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -122,7 +122,12 @@
                                 </div>
                             </ul>
                             <div class="cash">
-                                <span style="font-size:1.5em; color:grey;">{{ product.price }}원~</span>
+                                <span style="font-size:1.5em; color:grey;">
+                                    {{ product.price }}원 여기
+                                    {% if product.manuscript_price > 0 or product.highrank_price > 0 %}
+                                        ~
+                                    {% endif %}
+                                </span>
                             </div>
                         </div>
                     </div>
