--- a/static/css/product.css
+++ b/static/css/product.css
@@ -1062,61 +1062,141 @@ input::-webkit-input-placeholder {
 .product-upload-sub.tags .tag_wrapper:nth-child(1){
     display: inline-block;
     position:relative;
-    left:2%;
+    left:0%;
 }
 
 .product-upload-sub.tags .tag_wrapper:nth-child(2){
     display: inline-block;
     position:relative;
-    left:5%;
+    left:2%;
 }
 
 .product-upload-sub.tags .tag_wrapper:nth-child(3){
     display: inline-block;
     position:relative;
-    left:7%;
+    left:4%;
 }
 
 .product-upload-sub.tags .tag_wrapper:nth-child(4){
     display: inline-block;
     position:relative;
-    left:9%;
+    left:6%;
 }
 
 .product-upload-sub.tags .tag_wrapper:nth-child(5){
     display: inline-block;
     position:relative;
-    left:11%;
+    left:8%;
 }
 
 .product-upload-sub.tags .tag_wrapper:nth-child(6){
     display: inline-block;
     position:relative;
-    margin-left:15%;
+    margin-left:16%;
 }
 .product-upload-sub.tags .tag_wrapper:nth-child(7){
     display: inline-block;
     position:relative;
-    left:1%;
+    left:3%;
 }
 .product-upload-sub.tags .tag_wrapper:nth-child(8){
     display: inline-block;
     position:relative;
-    left:4%;
+    left:6%;
 }
 .product-upload-sub.tags .tag_wrapper:nth-child(9){
     display: inline-block;
     position:relative;
-    left:7%;
-}
-.product-upload-sub.tags .tag_wrapper:nth-child(10){
-    display: inline-block;
-    position:relative;
-    left:10%;
+    left:9%;
 }
 
 .product-upload-sub.tags label{
     padding-top:20px;
 }
 
+/* message_to_buyer */
+.product-upload-sub.message_to_buyer{
+    position:relative;
+    top:10px;
+}
 
+/* oneline_intro */
+.product-upload-sub.oneline_intro input[type="text"]{
+    width:80%;
+}
+
+/* message_to_admin */
+.product-upload-sub.message_to_admin{
+    position:relative;
+    top:10px;
+}
+
+/* auth-agreement part */
+#product-upload-form .auth-agreement {
+    width: 100%;
+    margin-top: 20px;
+}
+
+#product-upload-form .auth-agreement .auth-agreement-title {
+    width: 100%;
+    height: 50px;
+    padding: 5px 20px 5px 20px;
+    background: #F2F2F2;
+    line-height: 50px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #555555;
+}
+
+#product-upload-form .auth-agreement .auth-agreement-title span {
+    float: right;
+    color: #cccccc;
+    cursor: pointer;
+    margin-right:50px;
+}
+
+#product-upload-form .auth-agreement input[type=checkbox] {
+    display: none;
+}
+
+#product-upload-form .auth-agreement label {
+    cursor: pointer;
+}
+
+#product-upload-form .auth-agreement label:before {
+    content: "\2713";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    line-height: 25px;
+    font-size: 14px;
+    color: transparent;
+    border: 1px solid rgba(0, 0, 0, .2);
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+#product-upload-form .auth-agreement input[type=checkbox]:checked + label:before {
+    content: "\2713";
+    font-size: 22px;
+    color: #333;
+    text-align: center;
+    line-height: 22px;
+    cursor: pointer;
+}
+
+#product-upload-form .auth-agreement .auth-agreement-content {
+    display: none;
+    border-right: 1px solid #DADADA;
+    border-left: 1px solid #DADADA;
+    border-bottom: 1px solid #DADADA;
+    height: 120px;
+    width: 92%;
+    padding: 20px 30px 20px 30px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #555555;
+    overflow: scroll;
+}
