already existing cart item message (not complete)

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -41,9 +41,12 @@
                     success: function (data) {
                         if (data['status'] == 'success') {
                             alert('장바구니에 성공적으로 담겼습니다.');
+                        } else {
+                            alert('이미 장바구니에 있습니다.');
                         }
                     },
                     error: function (data) {
+                        alert('에러');
                     }
                 });
             });
